WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259884
REGRESSSION (iOS 17 Beta): Outgoing video and incoming audio do not recover if iOS User receives PSTN/FaceTime call in the middle of the WebRTC call and decline/accepts it from the notification
https://bugs.webkit.org/show_bug.cgi?id=259884
Summary
REGRESSSION (iOS 17 Beta): Outgoing video and incoming audio do not recover i...
Madara Freimane
Reported
2023-08-07 07:38:36 PDT
Summary: REGRESSSION (iOS 17 Beta): Outgoing and incoming video and audio do not recover if iOS User receives PSTN/FaceTime call in the middle of the WebRTC call Tested devices: The bug is reproducible on: - iPhone 11 Pro Max (iOS 17 Developer Beta 4, build: 21A5291j) and Safari (V17) The bug is not reproducible on: - iPhone 8 Plus (iOS 16.5.1) and Safari (V16.5) Use case: Precondition: Safari browser opened User is an active video WebRTC call Steps: 1. iOS 17 User receives a FaceTime/PSTN call 2. iOS 17 User accepts a FaceTime/PSTN call 3. iOS 17 User or another User ends the FaceTime/PSTN call 4. iOS 17 User observes incoming, outgoing audio and video Actual result: * Incoming and outgoing video do not recover untill iOS 17 User and other Users re-enables cameras, but sometimes when iOS User re-enables camera, the video is not sent again and it is impossible to get video back. * Incoming and outgoing audio recovers after a long time, approx. 20-30 seconds, sometimes only outgoing audio recovers and sometimes it is not possible to get audio back until User leaves a call and rejoins it with a fresh browser. Expected result: Incoming, outgoing audio and video recovers if the FaceTime/PSTN call is received in the middle of the WebRTC call Reproducibility: 100% Additional information: -Sysdiagnostics file added:
https://drive.google.com/file/d/1bE8Pubt2tc6Cc1ff2r8wncWmy0M_CSRl/view?usp=sharing
(bug reproduced at 16:19, EET, 07.08.2023.)
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-07 19:25:25 PDT
<
rdar://problem/113534779
>
Madara Freimane
Comment 2
2023-08-18 04:30:42 PDT
Bug is still reproducible. Tested devices and browsers: - iPhone 11 Pro (iOS 17 Developer Beta 6, build: 21A5312c) and Safari - iPhone 14 Pro (iOS 17 Public Beta 4, build: 21A5312c) and Safari - iPhone 13 (iOS 17 Public Beta 4, build: 21A5312c) and Safari Added a new sysdiagnostics file: (bug reproduced at 13:59, EET, 18.08.2023.)
https://drive.google.com/file/d/13MVR-IjHknW2Q4Sf5fFkGwIHCOEI240b/view?usp=sharing
Madara Freimane
Comment 3
2023-08-28 02:27:23 PDT
I see changes with 17 Developer Beta 7 (21A5319a), iOS 17 Public Beta 5 (21A5319a) - the call is unmuted automatically and outgoing video, and incoming audio revovers if the call is answered from the full screen and User returns to the browsers, BUT not in the case when we decline/answer the PSTN/FaceTime call from incoming call notification. Tested devices: The bug is reproducible on: - iPhone 11 Pro Max (iOS 17 Developer Beta 7, build: 21A5319a) and Safari (V17) The bug is not reproducible on: - iPhone 13 (iOS 16.6) and Safari (V16) Use case: Precondition: Browser opened User is an active video WebRTC call Steps: 1. iOS 17 User receives PSTN/FaceTime call 2. iOS 17 User declines/accepts PSTN/FaceTime call from FROM THE NOTIFICATION Actual results: - Outgoing video and incoming audio do not recover automatically, until User re-enabled microphone. Additional information: - A new sysdiagnostics file added: (bug reproduced at 17:24 EET, 25.08.23.)
https://drive.google.com/file/d/1RWFCtuc60F74rIUbY2EVTGU8mdSHR2Xa/view?usp=sharing
Manjesh Malavalli
Comment 4
2023-08-31 11:29:45 PDT
We are experiencing similar behavior as described by the reporter of this issue. Please take care of this before moving iOS 17 to GA.
youenn fablet
Comment 5
2023-10-24 01:54:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19478
EWS
Comment 6
2023-10-26 05:53:47 PDT
Committed
269809@main
(130f20449a4b): <
https://commits.webkit.org/269809@main
> Reviewed commits have been landed. Closing PR #19478 and removing active labels.
youenn fablet
Comment 7
2023-11-15 06:13:02 PST
***
Bug 255995
has been marked as a duplicate of this bug. ***
kristaps.mudurs
Comment 8
2025-03-17 05:37:53 PDT
The bug does not reproduce anymore on: - iPhone 11 Pro Max (iOS 18.3.1) and Safari - iPhone 15 (iOS 17.6.1) and Safari
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug