Source/WebCore/Modules/mediastream/MediaStreamTrack.h
@@ -194,6 +194,7 @@ private:
 
     // PlatformMediaSession::AudioCaptureSource
     bool isCapturingAudio() const final;
+    bool wantsToCaptureAudio() const final;
 
     void updateVideoCaptureAccordingMicrophoneInterruption(Document&, bool);
 
