Source/WebCore/platform/audio/PlatformMediaSession.h
@@ -208,6 +208,7 @@ public:
     public:
         virtual ~AudioCaptureSource() = default;
         virtual bool isCapturingAudio() const = 0;
+        virtual bool wantsToCaptureAudio() const = 0;
     };
 
     virtual std::optional<NowPlayingInfo> nowPlayingInfo() const;
